[package]
name = "ignite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bytecode = { path = "../../src/bytecode" }
oxidate = { path = "../../compiler/oxidate/" }
clap = { version = "4.5.3", features = ["derive"] }
thiserror = "1.0.58"
rustyline = "14.0.0"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
